syntax = "proto3";
package kyve.registry.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/KYVENetwork/kyve/x/registry/types";

// BundleProposal ...
message BundleProposal {
  // uploader ...
  string   uploader              = 1;
  // next_uploader ...
  string   next_uploader         = 2;
  // bundle_id ...
  string   bundle_id             = 3;
  // byte_size ...
  uint64   byte_size             = 4;
  // from_height ...
  uint64   from_height           = 5;
  // to_height ...
  uint64   to_height             = 6;
  // created_at ...
  uint64   created_at            = 7;
  // voters_valid ...
  repeated string voters_valid   = 8;
  // voters_invalid ...
  repeated string voters_invalid = 9;
}

// DelegationEntries ...
message DelegationEntries {
  // id ...
  uint64 id      = 1;
  // balance ...
  string balance = 2;
  // staker ...
  string staker  = 3;
  // k_index ...
  uint64 k_index = 4;
}

// DelegationPoolData ...
message DelegationPoolData {
  // Primary keys

  // id ...
  uint64 id     = 1;
  // staker ...
  string staker = 2;

  // F1Distribution

  // current_rewards ...
  uint64 current_rewards  = 3;
  // total_delegation ...
  uint64 total_delegation = 4;
  // latest_index_k ...
  uint64 latest_index_k   = 5;

  // Stats

  // delegator_count ...
  uint64 delegator_count               = 6;
  // latest_index_was_undelegation ...
  bool   latest_index_was_undelegation = 7;
}

// Delegator ...
message Delegator {
  // id ...
  uint64 id                = 1;
  // k_index ...
  uint64 k_index           = 2;
  // delegation_amount ...
  uint64 delegation_amount = 3;
  // staker ...
  string staker            = 4;
  // delegator ...
  string delegator         = 5;
}

// DelegatorResponse ...
message DelegatorResponse {
  // account ...
  string account           = 1;
  // pool ...
  Pool   pool              = 2;
  // current_reward ...
  uint64 current_reward    = 3;
  // delegation_amount ...
  uint64 delegation_amount = 4;
  // staker ...
  string staker            = 5;
  // delegation_pool_data
  DelegationPoolData delegation_pool_data = 6;
}

// Fifo ...
message Fifo {
  // head ...
  uint64 head = 1;
  // tail ...
  uint64 tail = 2;
}

// Funded ...
message Funded {
  // fund_id ...
  string fund_id = 1;
  // account ...
  string account = 2;
  // amount ...
  uint64 amount  = 3;
  // pool ...
  Pool   pool    = 4;
}

// Funder ...
message Funder {
  // fund_id ...
  string fund_id = 1;
  // account ...
  string account = 2;
  // amount ...
  uint64 amount  = 3;
}

// Pool ...
message Pool {
  // id ...
  uint64 id       = 1;
  // creator ...
  string creator  = 2;
  // name ...
  string name     = 3;
  // runtime ...
  string runtime  = 4;
  // logo ...
  string logo     = 5;
  // versions ...
  string versions = 6;
  // config ...
  string config   = 7;

  // height_archived ...
  uint64 height_archived      = 8;
  // bytes_archived ...
  uint64 bytes_archived       = 9;
  // total_bundles ...
  uint64 total_bundles        = 10;
  // total_bundle_rewards ...
  uint64 total_bundle_rewards = 11;

  // start_height ...
  uint64 start_height    = 12;
  // min_bundle_size ...
  uint64 min_bundle_size = 13;
  // operating_cost ...
  uint64 operating_cost  = 14;
  // storage_cost ...
  uint64 storage_cost    = 15;
  // paused ...
  bool   paused          = 16;

  // funders ...
  repeated string funders = 17;
  // lowest_funder ...
  string   lowest_funder  = 18;
  // total_funds ...
  uint64   total_funds    = 19;

  // stakers ...
  repeated string stakers = 20;
  // lowest_staker ...
  string   lowest_staker  = 21;
  // total_stake ...
  uint64   total_stake    = 22;
  // total_delegation ...
  uint64 total_delegation = 23;

  // bundle_proposal ...
  BundleProposal bundle_proposal = 24;
}

// Proposal ...
message Proposal {
  // bundle_id ...
  string bundle_id = 1;
  // pool_id ...
  uint64 pool_id   = 2;
  // uploader ...
  string uploader      = 3;
  // from_height ...
  uint64 from_height      = 4;
  // to_height ...
  uint64 to_height      = 5;
  // finalized_at ...
  uint64 finalized_at = 6;
}

// Staked ...
message Staked {
  // stake_id ...
  string stake_id = 1;
  // account ...
  string account  = 2;
  // amount ...
  uint64 amount   = 3;
  // pool ...
  Pool   pool     = 4;
}

// Staker ...
message Staker {
  // stake_id ...
  string stake_id = 1;
  // account ...
  string account  = 2;
  // amount ...
  uint64 amount   = 3;
}

// StakerDelegatorResponse ...
message StakerDelegatorResponse {
  // delegator ...
  string delegator         = 1;
  // current_reward ...
  uint64 current_reward    = 2;
  // delegation_amount ...
  uint64 delegation_amount = 3;
  // staker ...
  string staker            = 4;
}

// DelegationForStakerResponse ...
message DelegationForStakerResponse {
  // staker ...
  string staker           = 1;
  // current_reward ...
  uint64   current_reward              = 2;
  // delegation_amount ...
  uint64 delegation_amount = 3;
  // total_delegation_amount ...
  uint64 total_delegation_amount = 4;
  // delegator_count ...
  uint64 delegator_count = 5;
}

// Params defines the set of params for the registry module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  // max_funders ...
  uint64 max_funders                  = 1;
}

// CreatePoolProposal is a gov Content type for creating a pool.
message CreatePoolProposal {
  // title ...
  string title           = 1;
  // description ...
  string description     = 2;
  // name ...
  string name            = 3;
  // runtime ...
  string runtime         = 4;
  // logo ...
  string logo            = 5;
  // versions ...
  string versions        = 6;
  // config ...
  string config          = 7;
  // start_height ...
  uint64 start_height    = 8;
  // min_bundle_size ...
  uint64 min_bundle_size = 9;
  // operating_cost ...
  uint64 operating_cost  = 10;
  // storage_cost ...
  uint64 storage_cost    = 11;
}

// UpdatePoolProposal is a gov Content type for updating a pool.
message UpdatePoolProposal {
  // title ...
  string title           = 1;
  // description ...
  string description     = 2;
  // id ...
  uint64 id              = 3;
  // min_bundle_size ...
  uint64 min_bundle_size = 4;
  // config ...
  string config          = 5;
  // logo ...
  string logo            = 6;
  // name ...
  string name            = 7;
  // operating_cost ...
  uint64 operating_cost  = 8;
  // runtime ...
  string runtime         = 9;
  // storage_cost ...
  uint64 storage_cost    = 10;
  // versions
  string versions        = 11;
}
